--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "vue-router": "^4.3.0"
   },
   "devDependencies": {
+    "@tsparticles/slim": "^3.4.0",
+    "@tsparticles/vue3": "^3.0.1",
     "@vitejs/plugin-vue": "^5.0.4",
     "@vue/test-utils": "^2.4.5",
     "autoprefixer": "^10.4.19",
